fix alignment issues with bootstrap

--- a/src/StructureVisualizer/ControlBox/index.css
+++ b/src/StructureVisualizer/ControlBox/index.css
@@ -1,25 +1,54 @@
 .control-box {
   position: relative;
   z-index: 1;
-  height: 95px;
-  width: 448px;
-  background: rgb(223, 226, 255);
+  height: 100px;
+  width: 450px;
+  background: rgb(250, 250, 250);
   text-align: center;
   border: 1px solid #999;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  margin: 3px;
-  margin-top: -15px;
-  padding-top: 10px;
-  border-radius: 10px;
-}
-
-.control-box-row {
-  margin: 2px 5px;
+  margin-top: -20px;
+  padding: 30px 10px 10px 10px;
+  border-radius: 5px;
 }
 
 .supercell-input {
   width: 40px;
+  height: 25px;
+}
+
+.control-box-row {
+  margin: 5px 5px;
+  line-height: inherit;
+}
+
+.control-box-row label {
+  margin: 0px 5px;
+}
+
+.control-box-row button {
+  border-width: 1px;
+  border-style: outset;
+  border-color: rgb(0, 0, 0);
+  border-radius: 4px;
+  display: inline-flex;
+  align-items: center;
+  /* margin-top: -10px; */
+  margin: 0px 1px;
+  height: 25px;
+}
+
+.control-box-row button:hover {
+  background-color: rgb(222, 222, 222);
+}
+.control-box-row .option-checkbox {
+  margin: 0px 2px;
+}
+
+.control-box-row .camera-controls {
+  margin: 0px 30px;
+  display: inline;
 }
