--- a/src/StructureVisualizer/index.css
+++ b/src/StructureVisualizer/index.css
@@ -1,14 +1,13 @@
 .structure-window {
   position: relative;
   z-index: 2;
-  height: 350px;
-  width: 448px;
+  height: 370px;
+  width: 450px;
   background: #f5fffa;
   text-align: center;
   border: 1px solid #999;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 3px;
-  border-radius: 10px;
+  border-radius: 5px;
 }
